--- a/index.html
+++ b/index.html
@@ -21,12 +21,15 @@
                                 <a href="#" class="header__link">home</a>
                             </li>
                             <li class="header__item">
-                                <a href="#" class="header__link">about</a>
+                                <a href="./about.html" class="header__link">about</a>
                             </li>
                         </ul>
                     </nav>
                 </div>
                 <a class="header__link-more" href="#">contact us</a>
+                <button class="header__btn" type="button">
+                    <img src="./images/hamburger.svg" alt="menu" width="20" height="17">
+                </button>
             </div>
         </div>
     </header>
@@ -55,21 +58,21 @@
                     </div>
                     <div class="service__list">
                         <div class="service__item-wrapper">
-                            <img src="./images/Group 11.svg" alt="photo" width="72" height="72">
+                            <img class="service__img" src="./images/Group 11.svg" alt="photo" width="72" height="72">
                             <div class="service__item item">
                                 <h3 class="item__title">Experienced Individuals</h3>
                                 <p class="item__text">Our network is made up of highly experienced professionals who are passionate about what they do.</p>
                             </div>
                         </div>
                         <div class="service__item-wrapper">
-                            <img src="./images/Group 12.svg" alt="photo" width="72" height="72">
+                            <img class="service__img" src="./images/Group 12.svg" alt="photo" width="72" height="72">
                             <div class="service__item item">
                                 <h3 class="item__title">Easy to Implement</h3>
                                 <p class="item__text">Our processes have been refined over years of implementation meaning our teams always deliver.</p>
                             </div>
                         </div>
                         <div class="service__item-wrapper">
-                            <img src="./images/Group 13.svg" alt="photo" width="72" height="72">
+                            <img class="service__img" src="./images/Group 13.svg" alt="photo" width="72" height="72">
                             <div class="service__item item">
                                 <h3 class="item__title">Enhanced Productivity</h3>
                                 <p class="item__text">Our customized platform with in-built analytics helps you manage your distributed teams.</p>
@@ -79,13 +82,76 @@
                 </div>
             </div>
         </section>
+        <section class="deliver-section">
+            <div class="container">
+                <div class="deliver">
+                    <div class="deliver__title-wrapper">
+                        <h2 class="deliver__title">Delivering real results for top companies. Some of our <strong class="deliver__strong">success stories</strong>.</h2>
+                    </div>
+                    <div class="deliver__card-wrapper">
+                        <div class="deliver__card card">
+                            <p class="card__text">“The team perfectly fit the specialized skill set required. They focused on the most essential features helping us launch the platform eight months faster than planned.”</p>
+                            <h3 class="card__title">Kady Baker</h3>
+                            <p class="card__title-text">Product Manager at Bookmark</p>
+                            <img src="./images/Oval@2x.svg" alt="Photo" class="card__img" width="62" height="62">
+                        </div>
+                        <div class="deliver__card card">
+                            <p class="card__text">“We needed to automate our entire onboarding process. The team came in and built out the whole journey. Since going live, user retention has gone through the roof!”</p>
+                            <h3 class="card__title">Aiysha Reese</h3>
+                            <p class="card__title-text">Founder of Manage</p>
+                            <img src="./images/Oval3.svg" alt="Photo" class="card__img" width="62" height="62">
+                        </div>
+                        <div class="deliver__card card">
+                            <p class="card__text">“Amazing. Our team helped us build an app that delivered a new experience for hiring a physio. The launch was an instant success with 100k downloads in the first month.”</p>
+                            <h3 class="card__title">Arthur Clarke</h3>
+                            <p class="card__title-text">Co-founder of MyPhysio</p>
+                            <img src="./images/Oval6.svg" alt="Photo" class="card__img" width="62" height="62">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="ready-section">
+            <div class="container">
+                <div class="ready">
+                    <h2 class="ready__title">Ready to get started?</h2>
+                    <a href="#" class="ready__link">contact us</a>
+                </div>
+            </div>
+        </section>
     </main>
     <!-- Site Main end -->
     <!-- Site Footer start -->
     <footer class="site-footer">
         <div class="container">
             <div class="footer">
-                <!-- ... -->
+                <div class="footer__location-wrapper">
+                    <div class="footer__location-link-wrapper">
+                        <img class="footer__img" src="./images/myteam f.svg" alt="myteam" width="160" height="40">
+                        <div class="footer__link-wrapper">
+                            <a class="footer__link" href="#">home</a>
+                            <a class="footer__link" href="#">about</a>
+                        </div>
+                    </div>
+                    <ul class="footer__list">
+                        <li class="footer__item">
+                            <p class="footer__location_text">987 Hillcrest</p>
+                        </li>
+                        <li class="footer__item">
+                            <p class="footer__location_text">Irvine, CA</p>
+                        </li>
+                        <li class="footer__item">
+                            <p class="footer__location_text">California 92714</p>
+                        </li>
+                        <li class="footer__item">
+                            <p class="footer__location_text">Call Us : 949-833-7432</p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer__about-link">
+                    <img src="./images/link if.svg" alt="link" width="104" height="24">
+                    <p class="footer__about-text">Copyright 2020. All Rights Reserved</p>
+                </div>
             </div>
         </div>
     </footer>
